# Hyland2020

./: .gitignore  README.md  Untitled-1  algorithm.py  data.csv  eggs.csv  ex.csv  excalc.csv  main.py  read.py  realml.py  weathertest.py  write.py
Design/: background finish.psd  background.svgz  background1.svgz  frame.psd  hyland hackathon model user interface.ai  hyland hackathon model user interface1.ai  hyland hackathon model user interface1.svgz
Design/gif stuff/: frame.psd
ML/: algorithm.py  hellotry.py  realml.py
Tkinter/: tkinter.py
Weather/: algorithm.py  data.csv  main.py  read.py  weathertest.py  write.py
app/: body.html  main.py
chaq/chaquopy-hello/app/src/main/res/layout/: activity_main.xml
weather/: LICENSE  README.rst  pyproject.toml  weathertest.py
weather/src/weather/: __main__.py  app.py
weather/src/weather.dist-info/: METADATA
weather/src/weather/resources/: weather.icns
