[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Weather"
bundle = "com.stupid.weather"
version = "0.0.1"
url = "https://weather.stupid.com/weather"
license = "BSD license"
author = 'BHS'
author_email = "22yyu@beachwoodstudents.org"

[tool.briefcase.app.weather]
formal_name = "Weather"
description = "This is a Hackathon app"
icon = "src/weather/resources/weather"
sources = ['src/weather']
requires = []


[tool.briefcase.app.weather.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev18',
]

[tool.briefcase.app.weather.linux]
requires = [
    'toga-gtk>=0.3.0.dev18',
]

[tool.briefcase.app.weather.windows]
requires = [
    'toga-winforms>=0.3.0.dev18',
]

# Mobile deployments
[tool.briefcase.app.weather.iOS]
requires = [
    'toga-iOS>=0.3.0.dev18',
]

[tool.briefcase.app.weather.android]
requires = [
    'toga-android>=0.3.0.dev18',
]
